--- a/archives/toutiao-search/2024-02-29.md
+++ b/archives/toutiao-search/2024-02-29.md
@@ -1,63 +1,82 @@
 # 2024-02-29
 
-共 215 条
+共 233 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 29 2024 14:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Feb 29 2024 15:00:34 GMT+0800 (China Standard Time) -->
 1. [央媒评女教师殴打学生](https://so.toutiao.com/search?keyword=央媒评女教师殴打学生)
-1. [媒体：大陆海警的三张照片意味深远](https://so.toutiao.com/search?keyword=媒体：大陆海警的三张照片意味深远)
+1. [未发现肿瘤仍切除器官医院被判担责](https://so.toutiao.com/search?keyword=未发现肿瘤仍切除器官医院被判担责)
 1. [一批新规3月起施行](https://so.toutiao.com/search?keyword=一批新规3月起施行)
 1. [教师曝同事打学生被威胁？谣言](https://so.toutiao.com/search?keyword=教师曝同事打学生被威胁？谣言)
-1. [夏立言已赴大陆哀悼渔船事件死者](https://so.toutiao.com/search?keyword=夏立言已赴大陆哀悼渔船事件死者)
-1. [比亚迪宋PLUS荣耀版12.98万起](https://so.toutiao.com/search?keyword=比亚迪宋PLUS荣耀版12.98万起)
-1. [2月29日出生怎么过生日](https://so.toutiao.com/search?keyword=2月29日出生怎么过生日)
-1. [小米调研透露新车出厂价约20万](https://so.toutiao.com/search?keyword=小米调研透露新车出厂价约20万)
-1. [男子高铁吸烟狂言：不差钱随便罚](https://so.toutiao.com/search?keyword=男子高铁吸烟狂言：不差钱随便罚)
+1. [詹姆斯距离40000分还差40分](https://so.toutiao.com/search?keyword=詹姆斯距离40000分还差40分)
+1. [德舰向美机射导弹 导弹故障没打着](https://so.toutiao.com/search?keyword=德舰向美机射导弹+导弹故障没打着)
+1. [欧美为什么放缓汽车电动化](https://so.toutiao.com/search?keyword=欧美为什么放缓汽车电动化)
+1. [男子穿睡衣买车无人理去隔壁全款买](https://so.toutiao.com/search?keyword=男子穿睡衣买车无人理去隔壁全款买)
+1. [媒体：大陆海警的三张照片意味深远](https://so.toutiao.com/search?keyword=媒体：大陆海警的三张照片意味深远)
 1. [新疆户口高考加80分？警方辟谣](https://so.toutiao.com/search?keyword=新疆户口高考加80分？警方辟谣)
 1. [王菲谢霆锋共同署名送花篮](https://so.toutiao.com/search?keyword=王菲谢霆锋共同署名送花篮)
 1. [挖呀挖黄老师回应离职](https://so.toutiao.com/search?keyword=挖呀挖黄老师回应离职)
-1. [欧美为什么放缓汽车电动化](https://so.toutiao.com/search?keyword=欧美为什么放缓汽车电动化)
-1. [比亚迪海豹DM-i荣耀版14.98万起](https://so.toutiao.com/search?keyword=比亚迪海豹DM-i荣耀版14.98万起)
-1. [“消费左移”现象越来越明显吗](https://so.toutiao.com/search?keyword=“消费左移”现象越来越明显吗)
-1. [74岁女子涉嫌在小区纵火烧电动车](https://so.toutiao.com/search?keyword=74岁女子涉嫌在小区纵火烧电动车)
-1. [印度航天发射场广告现中国国旗图案](https://so.toutiao.com/search?keyword=印度航天发射场广告现中国国旗图案)
-1. [俄步兵仅开3枪就打下一架乌无人机](https://so.toutiao.com/search?keyword=俄步兵仅开3枪就打下一架乌无人机)
-1. [罕见病救命药将退市百余家庭如何自救](https://so.toutiao.com/search?keyword=罕见病救命药将退市百余家庭如何自救)
-1. [约50%罕见病患者在儿童期发病](https://so.toutiao.com/search?keyword=约50%罕见病患者在儿童期发病)
-1. [美军人自焚身亡 哈马斯：美应负责](https://so.toutiao.com/search?keyword=美军人自焚身亡+哈马斯：美应负责)
-1. [新能源车企打响“价格战”](https://so.toutiao.com/search?keyword=新能源车企打响“价格战”)
-1. [宝宝第一天上幼儿园等妈妈不肯午睡](https://so.toutiao.com/search?keyword=宝宝第一天上幼儿园等妈妈不肯午睡)
-1. [为何允许外资100%控股中国金融机构](https://so.toutiao.com/search?keyword=为何允许外资100%控股中国金融机构)
-1. [美国民众集会纪念自焚美国军人](https://so.toutiao.com/search?keyword=美国民众集会纪念自焚美国军人)
-1. [吃绝户男子找到 已花掉300万](https://so.toutiao.com/search?keyword=吃绝户男子找到+已花掉300万)
-1. [官方回应老师一个月直播超百场](https://so.toutiao.com/search?keyword=官方回应老师一个月直播超百场)
-1. [我国已登记78万多例罕见病病例](https://so.toutiao.com/search?keyword=我国已登记78万多例罕见病病例)
+1. [比亚迪宋PLUS荣耀版12.98万起](https://so.toutiao.com/search?keyword=比亚迪宋PLUS荣耀版12.98万起)
 1. [电车一再降价 油车慌不慌](https://so.toutiao.com/search?keyword=电车一再降价+油车慌不慌)
+1. [74岁女子在小区纵火烧电动车被刑拘](https://so.toutiao.com/search?keyword=74岁女子在小区纵火烧电动车被刑拘)
+1. [周鸿祎开免费AI课](https://so.toutiao.com/search?keyword=周鸿祎开免费AI课)
+1. [比亚迪海豹DM-i荣耀版14.98万起](https://so.toutiao.com/search?keyword=比亚迪海豹DM-i荣耀版14.98万起)
+1. [里夫斯赛前进球馆健身房](https://so.toutiao.com/search?keyword=里夫斯赛前进球馆健身房)
+1. [“消费左移”现象越来越明显吗](https://so.toutiao.com/search?keyword=“消费左移”现象越来越明显吗)
+1. [报告：“退出中国”在欧洲不受欢迎](https://so.toutiao.com/search?keyword=报告：“退出中国”在欧洲不受欢迎)
+1. [储户取钱到底有多难](https://so.toutiao.com/search?keyword=储户取钱到底有多难)
+1. [詹姆斯34分 湖人21分大逆转快船](https://so.toutiao.com/search?keyword=詹姆斯34分+湖人21分大逆转快船)
+1. [印度航天发射场广告现中国国旗图案](https://so.toutiao.com/search?keyword=印度航天发射场广告现中国国旗图案)
+1. [宝宝第一天上幼儿园等妈妈不肯午睡](https://so.toutiao.com/search?keyword=宝宝第一天上幼儿园等妈妈不肯午睡)
+1. [评论员：中国正迎来三大“回流”](https://so.toutiao.com/search?keyword=评论员：中国正迎来三大“回流”)
+1. [苏群：詹姆斯随着NBA的球风在进化](https://so.toutiao.com/search?keyword=苏群：詹姆斯随着NBA的球风在进化)
+1. [约基奇连续4场三双 掘金117-96国王](https://so.toutiao.com/search?keyword=约基奇连续4场三双+掘金117-96国王)
+1. [男子晒自己420元租的十几平小单间](https://so.toutiao.com/search?keyword=男子晒自己420元租的十几平小单间)
+1. [男子高铁吸烟狂言：不差钱随便罚](https://so.toutiao.com/search?keyword=男子高铁吸烟狂言：不差钱随便罚)
+1. [教师打骂不会做题学生被停职检查](https://so.toutiao.com/search?keyword=教师打骂不会做题学生被停职检查)
+1. [夏立言已赴大陆哀悼渔船事件死者](https://so.toutiao.com/search?keyword=夏立言已赴大陆哀悼渔船事件死者)
+1. [吃绝户男子找到 已花掉300万](https://so.toutiao.com/search?keyword=吃绝户男子找到+已花掉300万)
+1. [学校门口几名摊贩为抢地盘互砸摊位](https://so.toutiao.com/search?keyword=学校门口几名摊贩为抢地盘互砸摊位)
+1. [俄步兵仅开3枪就打下一架乌无人机](https://so.toutiao.com/search?keyword=俄步兵仅开3枪就打下一架乌无人机)
+1. [法院查明郑爽《倩女幽魂》片酬1.56亿](https://so.toutiao.com/search?keyword=法院查明郑爽《倩女幽魂》片酬1.56亿)
+1. [快船自去年11月以来首次遭遇连败](https://so.toutiao.com/search?keyword=快船自去年11月以来首次遭遇连败)
+1. [美军人自焚身亡 哈马斯：美应负责](https://so.toutiao.com/search?keyword=美军人自焚身亡+哈马斯：美应负责)
+1. [山东3月起免征氢能车辆高速公路费](https://so.toutiao.com/search?keyword=山东3月起免征氢能车辆高速公路费)
+1. [下周预计再迎降水降温](https://so.toutiao.com/search?keyword=下周预计再迎降水降温)
+1. [罕见病救命药将退市百余家庭如何自救](https://so.toutiao.com/search?keyword=罕见病救命药将退市百余家庭如何自救)
+1. [20多万现金烧成“炭”银行帮兑10万](https://so.toutiao.com/search?keyword=20多万现金烧成“炭”银行帮兑10万)
+1. [官方回应老师一个月直播超百场](https://so.toutiao.com/search?keyword=官方回应老师一个月直播超百场)
+1. [外媒：香港取消房产交易税重振市场](https://so.toutiao.com/search?keyword=外媒：香港取消房产交易税重振市场)
+1. [东契奇30分3双超越詹姆斯升历史第3](https://so.toutiao.com/search?keyword=东契奇30分3双超越詹姆斯升历史第3)
+1. [雷军建议苹果用户选购小米汽车](https://so.toutiao.com/search?keyword=雷军建议苹果用户选购小米汽车)
+1. [民进中央建议杜绝毕业生实习走过场](https://so.toutiao.com/search?keyword=民进中央建议杜绝毕业生实习走过场)
+1. [专家建议给部分70后80后养老金补偿](https://so.toutiao.com/search?keyword=专家建议给部分70后80后养老金补偿)
+1. [大伯供女儿留学每天吃剩菜捡垃圾](https://so.toutiao.com/search?keyword=大伯供女儿留学每天吃剩菜捡垃圾)
+1. [詹姆斯生涯第21季已得1274分](https://so.toutiao.com/search?keyword=詹姆斯生涯第21季已得1274分)
+1. [为何允许外资100%控股中国金融机构](https://so.toutiao.com/search?keyword=为何允许外资100%控股中国金融机构)
+1. [2月29日出生怎么过生日](https://so.toutiao.com/search?keyword=2月29日出生怎么过生日)
+1. [小米调研透露新车出厂价约20万](https://so.toutiao.com/search?keyword=小米调研透露新车出厂价约20万)
+1. [74岁女子涉嫌在小区纵火烧电动车](https://so.toutiao.com/search?keyword=74岁女子涉嫌在小区纵火烧电动车)
+1. [约50%罕见病患者在儿童期发病](https://so.toutiao.com/search?keyword=约50%罕见病患者在儿童期发病)
+1. [新能源车企打响“价格战”](https://so.toutiao.com/search?keyword=新能源车企打响“价格战”)
+1. [美国民众集会纪念自焚美国军人](https://so.toutiao.com/search?keyword=美国民众集会纪念自焚美国军人)
+1. [我国已登记78万多例罕见病病例](https://so.toutiao.com/search?keyword=我国已登记78万多例罕见病病例)
 1. [梅德韦杰夫回应马克龙涉乌言论](https://so.toutiao.com/search?keyword=梅德韦杰夫回应马克龙涉乌言论)
 1. [今天是四年一遇的日子](https://so.toutiao.com/search?keyword=今天是四年一遇的日子)
 1. [河南商丘妇联回应男童疑遭父母遗弃](https://so.toutiao.com/search?keyword=河南商丘妇联回应男童疑遭父母遗弃)
-1. [评论员：中国正迎来三大“回流”](https://so.toutiao.com/search?keyword=评论员：中国正迎来三大“回流”)
 1. [美参院共和党领袖将于11月辞去职务](https://so.toutiao.com/search?keyword=美参院共和党领袖将于11月辞去职务)
-1. [外媒：香港取消房产交易税重振市场](https://so.toutiao.com/search?keyword=外媒：香港取消房产交易税重振市场)
 1. [马克龙向乌派兵言论释放何种信号](https://so.toutiao.com/search?keyword=马克龙向乌派兵言论释放何种信号)
 1. [四年一遇新人特地229领证](https://so.toutiao.com/search?keyword=四年一遇新人特地229领证)
-1. [教师打骂不会做题学生被停职检查](https://so.toutiao.com/search?keyword=教师打骂不会做题学生被停职检查)
-1. [下周预计再迎降水降温](https://so.toutiao.com/search?keyword=下周预计再迎降水降温)
 1. [孩子第一天上幼儿园父母记录其反应](https://so.toutiao.com/search?keyword=孩子第一天上幼儿园父母记录其反应)
 1. [俄回应“德左”求助：会认真受理](https://so.toutiao.com/search?keyword=俄回应“德左”求助：会认真受理)
 1. [《南来北往》大结局意难平](https://so.toutiao.com/search?keyword=《南来北往》大结局意难平)
-1. [雷军建议苹果用户选购小米汽车](https://so.toutiao.com/search?keyword=雷军建议苹果用户选购小米汽车)
-1. [男子晒自己420元租的十几平小单间](https://so.toutiao.com/search?keyword=男子晒自己420元租的十几平小单间)
-1. [专家建议给部分70后80后养老金补偿](https://so.toutiao.com/search?keyword=专家建议给部分70后80后养老金补偿)
 1. [俄一前市长在贝加尔湖上驾车玩漂移](https://so.toutiao.com/search?keyword=俄一前市长在贝加尔湖上驾车玩漂移)
 1. [比特币大涨之际Coinbase平台出故障](https://so.toutiao.com/search?keyword=比特币大涨之际Coinbase平台出故障)
-1. [法院查明郑爽《倩女幽魂》片酬1.56亿](https://so.toutiao.com/search?keyword=法院查明郑爽《倩女幽魂》片酬1.56亿)
 1. [拜登称医生认为他看起来“太年轻”](https://so.toutiao.com/search?keyword=拜登称医生认为他看起来“太年轻”)
 1. [普京今日将发表国情咨文](https://so.toutiao.com/search?keyword=普京今日将发表国情咨文)
 1. [“老师打骂学生”曝光者疑被威胁](https://so.toutiao.com/search?keyword=“老师打骂学生”曝光者疑被威胁)
 1. [夏立言已赴大陆哀悼 朱立伦回应](https://so.toutiao.com/search?keyword=夏立言已赴大陆哀悼+朱立伦回应)
 1. [台退将：民进党对渔船事件误判形势](https://so.toutiao.com/search?keyword=台退将：民进党对渔船事件误判形势)
-1. [储户取钱到底有多难](https://so.toutiao.com/search?keyword=储户取钱到底有多难)
 1. [比亚迪驱逐舰05荣耀版上市](https://so.toutiao.com/search?keyword=比亚迪驱逐舰05荣耀版上市)
 1. [外媒：马克龙涉乌克兰言论震惊盟友](https://so.toutiao.com/search?keyword=外媒：马克龙涉乌克兰言论震惊盟友)
 1. [张小斐当选北京视协副主席](https://so.toutiao.com/search?keyword=张小斐当选北京视协副主席)
@@ -70,7 +89,6 @@
 1. [网友：卖天萁西梅汁的公司还没道歉](https://so.toutiao.com/search?keyword=网友：卖天萁西梅汁的公司还没道歉)
 1. [利物浦官方晒库马斯和丹斯庆祝照](https://so.toutiao.com/search?keyword=利物浦官方晒库马斯和丹斯庆祝照)
 1. [四年一度的2月29日咋来的](https://so.toutiao.com/search?keyword=四年一度的2月29日咋来的)
-1. [大伯供女儿留学每天吃剩菜捡垃圾](https://so.toutiao.com/search?keyword=大伯供女儿留学每天吃剩菜捡垃圾)
 1. [意设计师安排向模特身上扔水果等](https://so.toutiao.com/search?keyword=意设计师安排向模特身上扔水果等)
 1. [记者爆料“消防队长”吃霸王餐内情](https://so.toutiao.com/search?keyword=记者爆料“消防队长”吃霸王餐内情)
 1. [黄国昌：民众党挺蓝营“召委”人选](https://so.toutiao.com/search?keyword=黄国昌：民众党挺蓝营“召委”人选)
